# setup-wrf

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.docker.json  config.json  config.nci.json  environment.yml  pyproject.toml
.github/workflows/: build.yaml  build_docker.yaml  release.yaml
changelog/: 52.improvement.md  53.improvement.md  55.improvement.md  56.trivial.md  58.fix.md  60.improvement.md  61.improvement.md  62.fix.md  64.improvement.md  67.improvement.md
config/: config.docker.full.json  config.docker.json  config.nci.json
config/wrf/: config.docker.full.json  config.docker.json  config.nci.json
docs/: changelog.md  development.md
domains/au-test/: geo_em.d01.nc  namelist.wps  namelist.wrf
domains/aust-nsw/: namelist.wps  namelist.wrf
scripts/: download-geog.sh  run-wrf.sh  setup_for_wrf.py
src/setup_runs/: utils.py
src/setup_runs/wrf/: fetch_fnl.py  namelists.py  read_config_wrf.py
targets/docker/: cleanup_script_template.sh  main_script_template.sh
tests/unit/: test_read_config.py
tests/unit/test_read_config/: test_011_WRF_NCI_config_object.yml  test_012_WRF_docker_config_object.yml  test_WRF_docker_config_object.yml  test_docker_config_regression.yml  test_nci_config_regression.yml
