[tool.poetry]
name = "setup_runs"
version = "0.2.1a0"
description = "Scripts for running WRF "
authors = [
    "Peter Rayner <peter.rayner@superpowerinstitute.com.au>",
    "Jeremy Silver",
    "Jared Lewis <jared.lewis@climate-resource.com>"
]
readme = "README.md"
packages = [
    {include = "setup_runs", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pytz = "*"
f90nml = "*"
netCDF4 = "*"
requests = "*"
joblib = "^1.4.2"
tqdm = "^4.66.4"
click = "^8.1.7"
ruff = "^0.4.8"
python-dotenv = "^1.0.1"
prettyprinter = "^0.18.0"
attrs = "^24.2.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.1"
pytest-regressions = "^2.5.0"
xarray = "^2024.6.0"


[tool.poetry.group.dev.dependencies]
towncrier = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
package = "setup_runs"
package_dir = "src"
filename = "docs/changelog.md"
directory = "changelog/"
title_format = "## setup-wrf {version} ({project_date})"
underlines = [
    "",
    "",
    "",
]
issue_format = "[#{issue}](https://github.com/openmethane/setup-wrf/pulls/{issue})"
type = [
    { directory = "breaking", name = "⚠️ Breaking Changes  ⚠️", showcontent = true },
    { directory = "deprecation", name = "Deprecations", showcontent = true },
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "improvement", name = "Improvements", showcontent = true },
    { directory = "fix", name = "Bug Fixes", showcontent = true },
    { directory = "docs", name = "Improved Documentation", showcontent = true },
    { directory = "trivial", name = "Trivial/Internal Changes", showcontent = false },
]
