[project]
name = "setup_runs"
version = "0.4.3a0"
description = "Scripts for running WRF "
authors = [
    { name = "Peter Rayner", email = "peter.rayner@superpowerinstitute.com.au" },
    { name = "Jeremy Silver" },
    { name = "Jared Lewis", email = "jared.lewis@climate-resource.com" },
]
requires-python = ">=3.10,<4,<3.12"
readme = "README.md"
dependencies = [
    "pytz>=2025.2",
    "f90nml>=1.5",
    "netcdf4>=1.7.3",
    "requests>=2.32.5",
    "joblib>=1.4.2,<2",
    "tqdm>=4.66.4,<5",
    "click>=8.1.7,<9",
    "ruff>=0.4.8,<0.5",
    "python-dotenv>=1.0.1,<2",
    "prettyprinter>=0.18.0,<0.19",
    "attrs>=24.2.0,<25",
]

[dependency-groups]
tests = [
    "pytest>=8.2.1,<9",
    "pytest-regressions>=2.5.0,<3",
    "xarray>=2024.6.0,<2025",
]
dev = ["towncrier>=24.8.0,<25"]

[tool.uv]
default-groups = [
    "tests",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["src/setup_runs"]

[tool.hatch.build.targets.wheel]
include = ["src/setup_runs"]

[tool.hatch.build.targets.wheel.sources]
"src/setup_runs" = "setup_runs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.towncrier]
package = "setup_runs"
package_dir = "src"
filename = "docs/changelog.md"
directory = "changelog/"
title_format = "## setup-wrf {version} ({project_date})"
underlines = [
    "",
    "",
    "",
]
issue_format = "[#{issue}](https://github.com/openmethane/setup-wrf/pulls/{issue})"
type = [
    { directory = "breaking", name = "⚠️ Breaking Changes  ⚠️", showcontent = true },
    { directory = "deprecation", name = "Deprecations", showcontent = true },
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "improvement", name = "Improvements", showcontent = true },
    { directory = "fix", name = "Bug Fixes", showcontent = true },
    { directory = "docs", name = "Improved Documentation", showcontent = true },
    { directory = "trivial", name = "Trivial/Internal Changes", showcontent = false },
]
